--- a/1-ismetles/szilva/styles/main.css
+++ b/1-ismetles/szilva/styles/main.css
@@ -17,6 +17,9 @@ main table {
     background-color: var(--feher);
 }
 
-main {
-    display: none;
+article {
+    padding: 15px;
+    margin: 5px;
+    background-color: var(--feher);
 }
+
