--- a/1-ismetles/szilva/styles/main.css
+++ b/1-ismetles/szilva/styles/main.css
@@ -21,5 +21,54 @@ article {
     padding: 15px;
     margin: 5px;
     background-color: var(--feher);
+    /* visibility: hidden; */
 }
 
+/*size:  szélesség magasság */
+/* background-repeat: no-repeat; */
+/* background-position: bottom center; */
+/* background-size: 500px 100px;  */
+/* #miert {
+    background-image: url("../images/background.jpg");
+    background-size: cover;
+    opacity: 10%;
+} */
+
+#miert {
+    position: relative;
+    /* border: 20px solid black; */
+}
+
+/* relative, fixed, sticky, absolute, static */
+/* absolute: legközlebbi relatív őshöz pozícionál */
+#hatter {
+    background-image: url("../images/background.jpg");
+    background-size: cover;
+    /* height: 100%;
+    width: 100%; */
+    position: absolute;
+    /* left: 0px;
+    top: 0px;
+    right: 0px;
+    bottom: 0px; */
+    inset: 0;
+    opacity: 10%;
+    z-index: -1;
+}
+
+/* article {
+    position: relative;
+    z-index: 100;
+} */
+
+/* solid, dotted, dashed, double  */
+article p {
+    border-left: 5px solid purple;
+    padding-left: 10px;
+}
+
+/* none, disc, circle, square, "🍎" */
+article ul {
+    text-align: center;
+    list-style-type: none;
+}
