--- a/1-ismetles/szilva/styles/header-footer.css
+++ b/1-ismetles/szilva/styles/header-footer.css
@@ -100,3 +100,9 @@ footer {
         padding: 1rem 20px;
     }
 }
+
+@media (max-width: 500px) {
+    #kozosseg {
+        background-color: red !important;
+    }
+}
