--- a/2-html/1-media/style.css
+++ b/2-html/1-media/style.css
@@ -6,3 +6,9 @@ audio {
     /* color: red; */
 }
 
+iframe {
+    width: 80%;
+    height: 500px;
+    margin-bottom: 200px;
+    border: 2px solid black;
+}
