HTML form - label, p validálás

--- a/2-html/2-form/style.css
+++ b/2-html/2-form/style.css
@@ -91,6 +91,10 @@ select[multiple] {
     resize: both; /* horizontal, vertical */
 }
 
+select[name="polo"], textarea {
+    margin-left: 6px;
+}
+
 textarea {
     resize: none;
 }
