--- a/3-css/5-flexbox/style.css
+++ b/3-css/5-flexbox/style.css
@@ -47,6 +47,10 @@ hr {
     display: flex;
 }
 
+#b1 {
+    gap: 3px;
+}
+
 /* 2. "Vízszintes" igazítás */
 /* start, center, end */
 /* space-between, space-around, space-evenly */
@@ -76,13 +80,16 @@ hr {
 /* nowrap (default), wrap */
 #b5 {
     flex-wrap: wrap;
+    /* row-gap: 2em;
+    column-gap: 5em; */
+    gap: 2em 5em;
 }
 
 
 /* --------------- Elemek --------------- */
 
 /* 6. Elemek sorrendje */
-#b6 .e1 {
+/* #b6 .e1 {
     order: 2;
 }
 
@@ -92,11 +99,30 @@ hr {
 
 #b6 .e3 {
     order: 1;
+} */
+
+#b6 .e3 {
+    order: -1;
 }
 
 /* 7. Elemek igazítása */
 /* Elem magasságok is flexibilisek! */
+#b7 {
+    height: 400px;
+    align-items: start;
+}
 
+#b7 .elem {
+    height: unset;
+}
+
+#b7 .e3 {
+    align-self: stretch;
+}
+
+#b7 .e6 {
+    align-self: center;
+}
 
 /* 8. Nyújtás */
 /* 1:2, maradék */
@@ -104,6 +130,13 @@ hr {
     border: 2px solid black;
 }
 
+#b8 .e1 {
+    flex-grow: 1;
+}
+
+#b8 .e2 {
+    flex-grow: 2;
+}
 
 /* 9. Zsugorítás */
 /* Nem zsugorodik, 1:2 arányban */
@@ -112,10 +145,33 @@ hr {
     border: 2px solid black;
 }
 
+#b9 .e1 {
+    flex-shrink: 1;
+}
+
+#b9 .e2 {
+    flex-shrink: 2;
+}
+
+/* Nem zsugorodhat */
+#b9 .e3 {
+    flex-shrink: 0;
+}
 
 /* 10. Alapméret */
 /* Miben másabb a width-nél? */
+#b10 {
+    height: 800px;
+    flex-direction: column;
+    /* align-items: center; */
+    /* justify-content: center; */
+}
+
 #b10 .elem {
     border: 2px solid black;
+    flex-basis: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
