--- a/3-css/7-animaciok/FNL_mo/style.css
+++ b/3-css/7-animaciok/FNL_mo/style.css
@@ -163,13 +163,60 @@ div.toltes {
 /* 5. Töltés (pontok) */
 /* Pontok mérete: 10px */
 /* Pontok várakozása: idők harmadai */
+.t2 {
+    --ido: 2s;
+    height: 10px;
+    width: 10px;
+    display: inline-block;
+    border-radius: 50%;
+    transform: scale(0.75); /* 75% VS 0.75% == 0.0075 */
+    animation: ugras var(--ido) infinite ease;
+}
 
+.t2:nth-of-type(2) {
+    animation-delay: calc(var(--ido) / 3);
+}
 
+.t2:nth-of-type(3) {
+    animation-delay: calc(var(--ido) / 3 * 2);
+}
 
+/* Változás: növekedés; csökkenés */
+/* Állapot: lent; fent; lent */
+/* 0%-33%: ugrás */
+/* 33%-100%: várakozás */
+@keyframes ugras {
+    /* 0%, 33%, 100% {
+        transform: scale(0.75) translateY(0);
+    }
+    66% {
+        transform: scale(1) translateY(-50%);
+    } */
+    0%, 33%, 100% {
+        transform: scale(0.75) translateY(0);
+    }
+    17% {
+        transform: scale(1) translateY(-50%);
+    }
+}
 
 /* 6. Forgó */
 /* Forgó magassága 300px */
 /* Mindegyik kép ugyanannyi ideig látszik: animáció 20%-a */
 
+.forgo {
+    height: 300px;
+}
 
+.forgo img {
+    animation: csuszas 1s forwards;
+}
 
+@keyframes csuszas {
+    0% {
+        transform: translateY(0);
+    }
+    100% {
+        transform: translateY(-300px);
+    }
+}
