--- a/3-css/8-grid/style.css
+++ b/3-css/8-grid/style.css
@@ -51,20 +51,54 @@ hr {
 /* Oszlopok szélessége: 80-110-50-80*/
 .grid {
     display: grid;
-    grid-template-columns: 80px 110px 50px 80px;
-    grid-template-rows: 50px 50px 50px 50px 50px;
 }
 
+#d1 .grid {
+    grid-template-columns: 80px 110px 50px 80px;
+    grid-template-rows: 50px 50px 50px 50px 50px 50px;
+}
 
+.grid div {
+    width: 100%;
+    height: 100%;
+}
 
+#d1 .red {
+    grid-column: 2 / 4;
+    grid-row: 6 / 7;
+}
+
+#d1 .yellow {
+    grid-row: 1 / 6;
+    grid-column: 4 / 5;
+}
+
+#d1 .green {
+    grid-row: 3 / span 2; /* 3 + 2 => 5 */
+    grid-column: 1 / span 3;
+}
 
 /* 2. Rövidítések (shorthand property) */
 /* Sorok: 50px */
 /* Oszlopok: 80px */
 
+#d2 .grid {
+    /* grid-template-rows: 50px 50px 50px 50px 50px 50px;
+    grid-template-columns: 80px 80px 80px 80px; */
+    /* grid-template-rows: repeat(6, 50px);
+    grid-template-columns: repeat(4, 80px); */
+    grid-template: repeat(6, 50px) / repeat(4, 80px);
+}
 
+/* BF (bal felső) -> JA (jobb alsó) */
+/* Pont(sor, oszlop) */
+#d2 .red {
+    grid-area: 1 / 1 / 2 / 3;
+}
 
-
+#d2 .green {
+    grid-area: 2 / 1 / 5 / 3;
+}
 
 /* 3. Elnevezések */
 /* Grid szélessége: 80% */
