--- a/3-css/8-grid/style.css
+++ b/3-css/8-grid/style.css
@@ -74,7 +74,8 @@ hr {
 }
 
 #d1 .green {
-    grid-row: 3 / span 2; /* 3 + 2 => 5 */
+    grid-row: 3 / span 2;
+    /* 3 + 2 => 5 */
     grid-column: 1 / span 3;
 }
 
@@ -100,20 +101,73 @@ hr {
     grid-area: 2 / 1 / 5 / 3;
 }
 
+#d2 .blue {
+    grid-area: 4 / 2 / span 2 / span 3;
+    /* z-index: 1; */
+}
+
+#d2 .gray {
+    grid-area: 2 / 4 / span 5 / span 1;
+    order: -1;
+}
+
 /* 3. Elnevezések */
 /* Grid szélessége: 80% */
 /* 480px-re és kisebbekre átrendeződik! */
 
+#d3 .grid {
+    width: 80%;
+    grid-template-areas:
+        "header header  header  header"
+        "left   main    main    right"
+        "left   main    main    right"
+        "left   main    main    right"
+        ".      footer  footer  .";
+}
 
+/* Szerepkörök */
+#d3 .red {
+    grid-area: main;
+}
 
+#d3 .green {
+    grid-area: right;
+}
 
+#d3 .blue {
+    grid-area: left;
+}
+
+#d3 .yellow {
+    grid-area: header;
+}
+
+#d3 .gray {
+    grid-area: footer;
+}
+
+@media (max-width: 480px) {
+    #d3 .grid {
+        grid-template-areas:
+            "header  header"
+            "main    main"
+            "main    main"
+            "left    right"
+            "footer  footer";
+    }
+}
 
 /* 4. Fractional unit (fr) */
 /* 3 rész, 7 egység */
 /* 2/7 1/7 4/7 arányban felosztva*/
 
+#d4 .grid {
+    grid-template-columns: 2fr 1fr 4fr;
+}
 
-
+#d4 .blue {
+    grid-column: span 2;
+}
 
 
 /* 5. Minmax */
@@ -121,7 +175,11 @@ hr {
 /* A középső legalább 200px legyen! */
 /* A jobb oldali legalább 50px legyen! */
 
-
+/* minmax(a, b): a <= width <= b */
+#d5 .grid {
+    width: 80%;
+    grid-template-columns: 1fr minmax(200px, 1fr) minmax(50px, 1fr);
+}
 
 
 
@@ -129,8 +187,14 @@ hr {
 /* Legalább 200px széles oszlopok */
 /* Flexibilis megjelenítés: annyi oszlop, ahány fér */
 /* 10px és 4px kihagyás */
-
-
+/* auto-fit, auto-fill */
+#d6 .grid {
+    width: 80%;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    /* row-gap: 4px;
+    column-gap: 10px; */
+    gap: 4px 10px;
+}
 
 
 
@@ -138,7 +202,20 @@ hr {
 /* Sorok: 3db, 25%-os */
 /* Oszlopok: 3db 30%-os */
 /* Belső div-ek mérete 50% mindkét irányban! */
+/* justify = vízszintes, align = függőleges */
+/* content: rácsokat igazít */
+/* items: cellákban lévő elemeket igazít */
+#d7 .grid {
+    width: 80%;
+    grid-template-rows: repeat(3, 25%);
+    grid-template-columns: repeat(3, 30%);
+    justify-content: center;
+    align-content: space-around;
+    justify-items: center;
+    align-items: center;
+}
 
-
-
-
+#d7 .grid div {
+    height: 50%;
+    width: 50%;
+}
