--- a/3-css/9-allatkereskedes/style.css
+++ b/3-css/9-allatkereskedes/style.css
@@ -123,14 +123,78 @@ input[type="radio"], input[type="checkbox"] {
 
 /* Menü formázása + animáció */
 
+nav ul {
+    display: flex;
+    flex-wrap: wrap;
+}
 
+nav ul li {
+    display: flex;
+    flex-grow: 1;
+}
 
+nav ul li a {
+    flex-grow: 1;
+    text-align: center;
+    text-shadow: 0 0 1px black;
+    transition: letter-spacing 0.5s;
+    animation: megjelenes 10s;
+}
+
+nav ul li a:hover {
+    letter-spacing: 2px;
+}
+
+@keyframes megjelenes {
+    0% {
+        transform: scale(0);
+        text-shadow: 0 0 10px black;
+    }
+    80% {
+        transform: scale(1.5);
+        text-shadow: 0 0 1px black;
+    }
+    100% {
+        transform: scale(1);
+    }
+}
 
 /* ------------------------------------------------------------------- */
 /* Értékelés formázása */
 
+#ertekeles {
+    display: grid;
+    grid-template-columns: minmax(100px, 1fr) 5fr 3fr;
+    grid-template-rows: repeat(3, 1fr);
+    column-gap: 1em;
+    align-items: center;
+}
 
+#ertekeles img {
+    /* grid-column: 1 / 2; */
+    /* grid-row: 1 / 4; */
+    grid-row: span 3;
+}
 
+#ertekeles h2 {
+    grid-row: span 3;
+}
+
+#csik {
+    background: linear-gradient(to right, red, yellow, green);
+    position: relative;
+}
+
+#csik::before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: white;
+    position: absolute;
+    border-radius: 20px;
+}
 
 /* Értékelés animáció */
 
